--- a/login_to_test.html
+++ b/login_to_test.html
@@ -103,7 +103,7 @@
             /* Отступ сверху для кнопки */
         }
 
-        .help-link {
+        .help-link_bot {
             margin-top: 20px;
             /* Отступ сверху для ссылки */
             color: rgba(255, 255, 255, 0.8);
@@ -178,15 +178,17 @@
         <p>Укажи свою информацию ниже:</p>
         <div class="form-group">
             <label for="lastName" class="input-label">Фамилия:</label>
-            <input type="text" id="lastName" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
+            <input type="text" autocomplete="off" id="lastName" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
+            <div id="lastNameError" class="text-danger" style="display: none;">Тест не доступен к прохождению. Обновите страницу чтобы повторить.</div>
         </div>
+        
         <div class="form-group">
             <label for="firstName" class="input-label">Имя:</label>
-            <input type="text" id="firstName" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
+            <input type="text" autocomplete="off" id="firstName" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
         </div>
         <div class="form-group">
             <label for="class" class="input-label">Класс:</label>
-            <input type="text" id="class" class="form-control" maxlength="3" pattern="[A-Za-zА-Яа-яЁё0-9]{1,3}">
+            <input type="text" autocomplete="off" id="class" class="form-control" maxlength="3" pattern="[A-Za-zА-Яа-яЁё0-9]{1,3}">
         </div>
         <button type="button" id="startTestButton" class="start-button">Начать</button>
 
@@ -194,14 +196,14 @@
     </div>
 
     <div class="help-container">
-        <a href="#" class="help-link">Помощь >>></a>
+        <a href="https://t.me/quiz_helperBot" class="help-link_bot">Помощь >>></a>
     </div>
 
     <div class="modal fade" id="helpModal" tabindex="-1" aria-labelledby="helpModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="helpModalLabel">Помощь</h5>
+                    <a href="https://t.me/quiz_helperBot" class="btn btn-primary">Написать в Telegram</a>
                 </div>
                 <div class="modal-body">
                     <p>Ответы на вопросы:</p>
