--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-database-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Подключаем шрифт Material Symbols -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -230,19 +230,19 @@
         <!-- Варианты ответов -->
         <div class="answer-card" onclick="toggleAnswer(this)">
             <div class="answer-text"></div>
-            <span class="material-symbols-outlined answer-icon">radio_button_unchecked</span>
+            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
         </div>
         <div class="answer-card" onclick="toggleAnswer(this)">
             <div class="answer-text"></div>
-            <span class="material-symbols-outlined answer-icon">radio_button_unchecked</span>
+            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
         </div>
         <div class="answer-card" onclick="toggleAnswer(this)">
             <div class="answer-text"></div>
-            <span class="material-symbols-outlined answer-icon">radio_button_unchecked</span>
+            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
         </div>
         <div class="answer-card" onclick="toggleAnswer(this)">
             <div class="answer-text"></div>
-            <span class="material-symbols-outlined answer-icon">radio_button_unchecked</span>
+            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
         </div>
 
     </div>
@@ -256,12 +256,15 @@
     <script>
         function toggleAnswer(card) {
             const icon = card.querySelector('.answer-icon');
-            if (icon.textContent === 'radio_button_unchecked') {
-                icon.textContent = 'check_circle'; // Меняем на галочку
+            if (icon.classList.contains('bi-circle')) {
+                icon.classList.remove('bi-circle');
+                icon.classList.add('bi-check-circle'); // Заменяем на иконку с галочкой
             } else {
-                icon.textContent = 'radio_button_unchecked'; // Меняем обратно на пустой круг
+                icon.classList.remove('bi-check-circle'); // Удаляем галочку
+                icon.classList.add('bi-circle'); // Возвращаем пустой круг
             }
         }
+
     </script>
 
     <script type="module" src="js/firebaseConfig.js"></script>
