--- a/login_to_test.html
+++ b/login_to_test.html
@@ -219,7 +219,7 @@
                         <li><b>Остальные вопросы: пишите в Telegram по кнопке ниже.</b></li>
                     </ul>
                     <div class="text-center">
-                        <a href="https://t.me/young_yarchefis" class="btn btn-primary">Написать в Telegram</a>
+                        <a href="https://t.me/quiz_helperBot" class="btn btn-primary">Написать в Telegram</a>
                     </div>
                 </div>
                 <div class="modal-footer">
