--- a/start.html
+++ b/start.html
@@ -227,24 +227,29 @@
 
         </div>
 
-        <!-- Варианты ответов -->
-        <div class="answer-card" onclick="toggleAnswer(this)">
-            <div class="answer-text"></div>
-            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
-        </div>
-        <div class="answer-card" onclick="toggleAnswer(this)">
-            <div class="answer-text"></div>
-            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
-        </div>
-        <div class="answer-card" onclick="toggleAnswer(this)">
-            <div class="answer-text"></div>
-            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
-        </div>
-        <div class="answer-card" onclick="toggleAnswer(this)">
-            <div class="answer-text"></div>
-            <i class="bi bi-circle answer-icon"></i> <!-- Изменено на Bootstrap иконку -->
-        </div>
+    
 
+        <!-- Варианты ответов
+        <div class="answer-card" onclick="toggleAnswer(this)">
+            <div class="answer-text"></div>
+            <i class="bi bi-circle answer-icon"></i>
+        </div>
+        <div class="answer-card" onclick="toggleAnswer(this)">
+            <div class="answer-text"></div>
+            <i class="bi bi-circle answer-icon"></i>
+        </div>
+        <div class="answer-card" onclick="toggleAnswer(this)">
+            <div class="answer-text"></div>
+            <i class="bi bi-circle answer-icon"></i>
+        </div>
+        <div class="answer-card" onclick="toggleAnswer(this)">
+            <div class="answer-text"></div>
+            <i class="bi bi-circle answer-icon"></i>
+        </div> -->
+
+        <div class="answer-container"></div>
+
+        
     </div>
 
     <div class="container button-container"> <!-- Применяем класс контейнера -->
