fix teacher page 2

--- a/result.html
+++ b/result.html
@@ -35,7 +35,7 @@
         }
 
         .result-box {
-            background-color: rgba(80, 200, 120, 0.9); /* Мягкий зеленый */
+            background-color: rgba(80, 200, 120, 0.9);
             color: white;
             padding: 40px;
             margin-bottom: 20px;
@@ -177,14 +177,14 @@
     <div class="container">
         <!-- Зеленая плашка с кляксами -->
         <div class="result-box">
-            <div class="congrats">Поздравляем!</div>
-            <h1>Вы набрали:</h1>
+            <h1>Ваша оценка:</h1>
             <div class="score" id="score">...</div>
+            <p style="font-size: 15px;" id="congr"></p>
         </div>
 
         <!-- Серая плашка -->
         <div class="name-box">
-            <p>имя: <span class="name" id="userName">Иван Иванов</span></p>
+            <p>имя: <span class="name" id="userName"></span></p>
         </div>
 
         <!-- Синяя плашка с белой внутри -->
