--- a/result.html
+++ b/result.html
@@ -35,7 +35,7 @@
         }
 
         .result-box {
-            background-color: rgba(80, 200, 120, 0.9);
+            background-color: rgba(150, 150, 150, 0.519);
             color: white;
             padding: 40px;
             margin-bottom: 20px;
@@ -189,19 +189,20 @@
 
         <!-- Синяя плашка с белой внутри -->
         <div class="blue-box">
-            <div class="time-info">Тест был пройден за:<br>функция в разработке</div>
+            <div class="time-info">Тест был пройден за:</div>
             <div class="time-box">
                 <div>
-                    <div class="time-number" id="minutess">?</div>
+                    <div class="time-number" id="minutes">?</div>
                     <div class="time-label">Минут</div>
                 </div>
                 <div class="divider"></div>
                 <div>
-                    <div class="time-number" id="secondss">?</div>
+                    <div class="time-number" id="seconds">?</div>
                     <div class="time-label">Секунд</div>
                 </div>
             </div>
         </div>
+        <p style="margin-top: 20px;">Обратите внимание! Если вы списали это будет видно по общему таймеру выше. учитель примет решение ставить вам 2 или вашу оценку.</p>
         <!-- <div class="link">
             <a class="link_a" href="">постоянная ссылка на тест</a>
         </div> -->
