--- a/start.html
+++ b/start.html
@@ -206,6 +206,19 @@
                 /* Увеличиваем отступы по бокам на мобильных устройствах */
             }
         }
+
+        .filltext-input {
+            border: 1px solid #30BAFF;
+            /* Цвет рамки */
+            padding: 10px;
+            /* Отступы внутри инпута */
+            border-radius: 5px;
+            /* Закругленные углы */
+            width: 100%;
+            /* Ширина инпута */
+            box-sizing: border-box;
+            /* Учитывать отступы и границы в ширине */
+        }
     </style>
 </head>
 
@@ -227,7 +240,7 @@
 
         </div>
 
-    
+
 
         <!-- Варианты ответов
         <div class="answer-card" onclick="toggleAnswer(this)">
@@ -249,7 +262,7 @@
 
         <div class="answer-container"></div>
 
-        
+
     </div>
 
     <div class="container button-container"> <!-- Применяем класс контейнера -->
