--- a/login_to_test.html
+++ b/login_to_test.html
@@ -164,6 +164,28 @@
             background-color: #557ac7;
             /* Более темный цвет при наведении */
         }
+
+        .test-dates-block {
+            background-color: #f0f8ff;
+            border: 1px solid #88a8ee;
+            border-radius: 8px;
+            padding: 15px;
+            margin: 15px 0;
+            text-align: center;
+        }
+
+
+        .test-dates-period {
+            font-size: 16px;
+            color: #555;
+            margin: 0;
+        }
+
+        .start-date,
+        .end-date {
+            font-weight: bold;
+            color: #88a8ee;
+        }
     </style>
 </head>
 
@@ -171,12 +193,16 @@
 
     <div class="container">
         <h1 id="testname" style="font-weight: 700; color: #88a8ee;">Загрузка...</h1> <!-- Заголовок теста -->
-        <p style="font-size: 15px; color: rgba(255, 111, 142, 0.699); text-align: center;" id="testDates"></p>
-        <div class="alert alert-warning text-center" role="alert" id="browserWarning">
-            <strong>Предупреждение:</strong> Прохождение теста в браузере Яндекс может работать некорректно. Рекомендуем
-            использовать Chrome или Firefox. <br>
-            А также тест может работать некорректно на компьютерах.
+        <div id="testDatesBlock" class="test-dates-block" style="display: none;">
+            <p class="test-dates-period">
+                <span class="start-date" id="startDate"></span> — <span class="end-date" id="endDate"></span>
+                <p style="color: #000000; font-size: 14px; margin-bottom: 0;">По дате окончания советую ориентироватся на начале дня когда будет урок. Результаты фиксируются около 5-6 утра.</p>
+            </p>
         </div>
+        <!--<div class="alert alert-warning text-center" role="alert" id="browserWarning">
+            <strong>Предупреждение:</strong> Прохождение теста в браузере Яндекс может работать некорректно. Рекомендуем
+            использовать Chrome или Firefox.
+        </divё>-->
 
 
         <div class="form-group">
@@ -194,8 +220,8 @@
         </div>
         <div class="form-group">
             <label for="class" class="input-label">Класс:</label>
-            <input type="text" autocomplete="off" id="class" class="form-control" maxlength="3"
-                pattern="[A-Za-zА-Яа-яЁё0-9]{1,3}">
+            <input type="text" autocomplete="off" id="class" class="form-control" maxlength="6"
+            pattern="[A-Za-zА-Яа-яЁё0-9]{1,3}" placeholder="Заполнится автоматически">
         </div>
         <button type="button" id="startTestButton" class="start-button">Начать</button>
 
@@ -242,4 +268,5 @@
     <script type="module" src="firebaseConfig.js"></script>
 
 </body>
+
 </html>
